[gd_scene load_steps=10 format=3 uid="uid://d2ae3rj408ax2"]

[ext_resource type="Texture2D" uid="uid://de1uw8kn2fwm1" path="res://Edited/Trees.png" id="1_00de0"]
[ext_resource type="Texture2D" uid="uid://dw4nrx7w0u1b3" path="res://crops/crops-v2/CropOutline.png" id="2_3hw1q"]
[ext_resource type="Script" path="res://TreeSprites.gd" id="2_6s774"]

[sub_resource type="AtlasTexture" id="AtlasTexture_nbjds"]
atlas = ExtResource("1_00de0")
region = Rect2(0, 0, 100, 152)

[sub_resource type="AtlasTexture" id="AtlasTexture_460tr"]
atlas = ExtResource("1_00de0")
region = Rect2(100, 0, 100, 152)

[sub_resource type="AtlasTexture" id="AtlasTexture_a3qq0"]
atlas = ExtResource("1_00de0")
region = Rect2(200, 0, 100, 152)

[sub_resource type="SpriteFrames" id="SpriteFrames_r854q"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nbjds")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_460tr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a3qq0")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_akeyn"]
radius = 11.0

[sub_resource type="CircleShape2D" id="CircleShape2D_upn8l"]
radius = 35.5611

[node name="Node2D" type="Node2D"]
script = ExtResource("2_6s774")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-49, -107)
sprite_frames = SubResource("SpriteFrames_r854q")
frame = 1
centered = false
offset = Vector2(0, -20)

[node name="TestTree" type="StaticBody2D" parent="AnimatedSprite2D"]
position = Vector2(50, 54)
collision_layer = 8
collision_mask = 2

[node name="Sprite2D" type="Sprite2D" parent="AnimatedSprite2D/TestTree"]
visible = false
position = Vector2(0, 50)
scale = Vector2(2, 2)
texture = ExtResource("2_3hw1q")

[node name="TreeCollision" type="CollisionShape2D" parent="AnimatedSprite2D/TestTree"]
position = Vector2(-1, 53)
shape = SubResource("CircleShape2D_akeyn")

[node name="Area2D" type="Area2D" parent="AnimatedSprite2D"]
position = Vector2(50, 54)
collision_layer = 8
collision_mask = 2

[node name="Opacity" type="CollisionShape2D" parent="AnimatedSprite2D/Area2D"]
y_sort_enabled = true
position = Vector2(-1, -24)
scale = Vector2(0.9, 0.96)
shape = SubResource("CircleShape2D_upn8l")

[connection signal="body_entered" from="AnimatedSprite2D/Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="AnimatedSprite2D/Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="mouse_entered" from="AnimatedSprite2D/Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="AnimatedSprite2D/Area2D" to="." method="_on_area_2d_mouse_exited"]
